--- a/examples/client/ice.conf
+++ b/examples/client/ice.conf
@@ -17,6 +17,8 @@
 	{ "host": "stun4.l.google.com", "port": "19302" }
 	],
 
-"tracker": {"host": "127.0.0.1", "port": "20000"}
+"tracker": {"host": "127.0.0.1", "port": "20000"},
+
+"protocol": {"magic number": "1229"}
 
 }
