--- a/server/ice_tracker.conf
+++ b/server/ice_tracker.conf
@@ -1,5 +1,7 @@
 {
 
-"tracker": {"host": "127.0.0.1", "port": "20000"}
+"tracker": {"host": "127.0.0.1", "port": "20000"},
+
+"protocol": {"magic number": "1229"}
 
 }
