--- a/examples/client/ice.conf
+++ b/examples/client/ice.conf
@@ -1,6 +1,8 @@
 {
 
 "stun_servers_list": [
+	{ "host": "121.14.156.243", "port": "3478" },
+	{ "host": "192.168.0.111", "port": "3478" },
 	{ "host": "stun.ekiga.net", "port": "3478" },
 	{ "host": "stunserver.org", "port": "3478" },
 	{ "host": "stun.ideasip.com", "port": "3478" },
