1. add peers caches. 2. adjust protocol rule.

--- a/examples/client/ice.conf
+++ b/examples/client/ice.conf
@@ -1,8 +1,6 @@
 {
 
 "stun_servers_list": [
-	{ "host": "121.14.156.243", "port": "3478" },
-	{ "host": "192.168.0.111", "port": "3478" },
 	{ "host": "stun.ekiga.net", "port": "3478" },
 	{ "host": "stunserver.org", "port": "3478" },
 	{ "host": "stun.ideasip.com", "port": "3478" },
@@ -16,7 +14,9 @@
 	{ "host": "stun1.l.google.com", "port": "19302" },
 	{ "host": "stun2.l.google.com", "port": "19302" },
 	{ "host": "stun3.l.google.com", "port": "19302" },
-	{ "host": "stun4.l.google.com", "port": "19302" }
+	{ "host": "stun4.l.google.com", "port": "19302" },
+	{ "host": "121.14.156.243", "port": "3478" },
+	{ "host": "192.168.0.111", "port": "3478" }
 	],
 
 "tracker": {"host": "127.0.0.1", "port": "20000"},
